org.sunbird.questionunit.quml-1.1/renderer/styles/style.css
/* ... */
.sb-question-dsp-container .sb-question-content .sb-question,
  .sb-question-dsp-container .sb-question-content .sb-answer,
  .sb-question-dsp-container .sb-question-content .sb-question-content-card, #questionset .mcq-horizontal .mcq-title, #questionset .mcq-vertical .mcq-title, #questionset .mcq-grid .mcq-title, #questionset .mcq-horizontal .mcq-options .mcq-option p, #questionset .mcq-vertical .mcq-options .mcq-option p, #questionset .mcq-grid .mcq-options .mcq-option p, #questionset .mcq-horizontal .mcq-options .mcq-option, #questionset .mcq-vertical .mcq-options .mcq-option, #questionset .mcq-grid .mcq-options .mcq-option {
     line-height: normal;
}
.sb-question-dsp-body .sb-btn.sb-btn-normal{
  font-size:calc(var(--fontS) + 2px);padding: 0px 16px;
}

#questionset .mcq-horizontal .mcq-title{
  text-align: center;
}
#questionset .mcq-horizontal .mcq-options .mcq-option, 
#questionset .mcq-vertical .mcq-options .mcq-option, 
#questionset .mcq-grid .mcq-options .mcq-option,
#questionset .mcq-vertical .mcq-title, 
#questionset .mcq-grid .mcq-title{
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: flex-start;
}

@media screen and (max-width:768px) {
  .sb-question-dsp-container .sb-question-content .sb-question,
  .sb-question-dsp-container .sb-question-content .sb-answer, #questionset .mcq-horizontal .mcq-title, #questionset .mcq-vertical .mcq-title, #questionset .mcq-grid .mcq-title  {
      font-size:var(--fontM);
  }
  .sb-question-dsp-container .sb-question-content .sb-question-content-card, #questionset .mcq-horizontal .mcq-options .mcq-option p, #questionset .mcq-vertical .mcq-options .mcq-option p, #questionset .mcq-grid .mcq-options .mcq-option p {
      font-size:var(--fontS);
  }
}

@media screen and (min-width:768px) and (max-width:991px){
  .sb-question-dsp-container .sb-question-content .sb-question,
  .sb-question-dsp-container .sb-question-content .sb-answer, #questionset .mcq-horizontal .mcq-title, #questionset .mcq-vertical .mcq-title, #questionset .mcq-grid .mcq-title {
      font-size:var(--fontL);
  }
  .sb-question-dsp-container .sb-question-content .sb-question-content-card, #questionset .mcq-horizontal .mcq-options .mcq-option p, #questionset .mcq-vertical .mcq-options .mcq-option p, #questionset .mcq-grid .mcq-options .mcq-option p {
      font-size:var(--fontM);
  }
}

@media screen and (min-width:992px)  and (max-width:1399px){
  .sb-question-dsp-container .sb-question-content .sb-question,
  .sb-question-dsp-container .sb-question-content .sb-answer, #questionset .mcq-horizontal .mcq-title, #questionset .mcq-vertical .mcq-title, #questionset .mcq-grid .mcq-title {
      font-size:var(--fontXL);
  }
  .sb-question-dsp-container .sb-question-content .sb-question-content-card, #questionset .mcq-horizontal .mcq-options .mcq-option p, #questionset .mcq-vertical .mcq-options .mcq-option p, #questionset .mcq-grid .mcq-options .mcq-option p {
      font-size:var(--fontL);
  }
  .sb-question-dsp-container .sb-question-content .sb-star-icon {
      width: 32px;
      height: 32px;
      text-align: center;
      display: inline-flex;
      align-items: center;
      justify-content: center;
  }
  .sb-question-dsp-container .sb-question-content .sb-star-icon i.icon {
      margin-left: 0px;
      margin-right: 0px;    
      font-size: 10px;
      margin-top: 1px;
      text-align: center;
  }
}

@media screen and (min-width:1400px) {
  .sb-question-dsp-container .sb-question-content .sb-question,
  .sb-question-dsp-container .sb-question-content .sb-answer, #questionset .mcq-horizontal .mcq-title, #questionset .mcq-vertical .mcq-title, #questionset .mcq-grid .mcq-title {
      font-size:var(--fontXXL);
  }
  .sb-question-dsp-container .sb-question-content .sb-question-content-card, #questionset .mcq-horizontal .mcq-options .mcq-option p, #questionset .mcq-vertical .mcq-options .mcq-option p, #questionset .mcq-grid .mcq-options .mcq-option p {
      font-size:var(--fontXL);
  }
}
body{
  margin:0;
}
 .feedback-popup-solution {
  --font-size-base: 1rem;
  --font-size-factor: 1vw;
  --font-size: calc(var(--font-size-base) + var(--font-size-factor));
  font-size: calc(12.5px + (32 - 14) * (100vw - 360px)/(1920 - 360)) !important;
  line-height: normal;
}

.feedback-content {
  padding: 2em 4em 4em 2em;
  font-size: 1em;
  margin: 0 auto;
  background: #fff;
  color: #333333;
  height: 100%;
  position: relative;
}
.feedback-content .close-btn {
  width: 2.3em;
  height: 2.3em;
  position: absolute;
  right: 1em;
  top: 1em;
  cursor: pointer;
}
.feedback-content .feedback-content-questions {
  margin-bottom: 1.5em;
}
.feedback-content .feedback-content-questions .feedback-content-title {
  font-weight: bold;
  font-size: 0.9em;
}
.feedback-content .feedback-content-questions .feedback-content-description {
  font-size: 0.8em;
  padding-top: 0.7em;
}
.feedback-content .feedback-content-questions .feedback-content-description .feedback-gallery {
  padding-top: 0.8em;
}
.feedback-content .feedback-content-questions .feedback-content-description .feedback-gallery .video-section {
  padding-top: 0.7em;
}
.feedback-content .feedback-action-buttons {
  display: flex;
  justify-content: center;
  position: absolute;
  bottom: 2em;
  left: 0;
  right: 0;
}

.feedback-gallery-view {
  width: 100%;
  height: 100%;
  position:relative;
}
.feedback-gallery-view .close-btn {
  width: 2.3em;
  height: 2.3em;
  position: absolute;
  right: 1em;
  top: 1em;
  cursor: pointer;
  z-index: 9999;
}
.feedback-gallery-view .feedback-gallery {
  height: 100vh;
}
.feedback-gallery-view .feedback-gallery .video-section {
  height: 100%;
}
.feedback-gallery-view .feedback-gallery .image-section {
  height: 100%;
}

.feedback-overlay {
  background: transparent;
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100%;
}
/* ... */

